[workspace]

resolver = "2"

members = [
    "crates/relayer/relayer-components",
    "crates/relayer/relayer-components-extra",

    "crates/runtime/runtime-components",
    "crates/runtime/async-runtime-components",
    "crates/runtime/tokio-runtime-components",
    "crates/runtime/runtime",

    "crates/test/test-components",
    "crates/test/test-suite",

    "crates/any/any-counterparty",

    "crates/cli/cli-components",
    "crates/cli/cli-framework",
    "crates/cli/cli",

    "crates/encoding/encoding-components",
    "crates/encoding/protobuf-encoding-components",

    "crates/error",

    "crates/logging/logging-components",
    "crates/logging/tracing-logging-components",
    "crates/logging/logger",

    "crates/cosmos/cosmos-chain-components",
    "crates/cosmos/cosmos-test-components",
    "crates/cosmos/cosmos-integration-tests",
    "crates/cosmos/cosmos-relayer",
    "crates/cosmos/cosmos-wasm-relayer",

    "crates/celestia/celestia-chain",
    "crates/celestia/celestia-client-components",
    "crates/celestia/celestia-test-components",
    "crates/celestia/celestia-integration-tests",

    "crates/wasm/wasm-client-components",
    "crates/wasm/wasm-test-components",

    "crates/solomachine/solomachine-chain-components",
    "crates/solomachine/solomachine-relayer",

    "crates/mock/mock-relayer",
    "crates/mock/mock-cosmos-relayer",

    "tools/integration-test",
    "tools/test-framework",
]

[workspace.package]

version         = "0.1.0"
edition         = "2021"
license         = "Apache-2.0"
keywords        = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository      = "https://github.com/informalsystems/hermes-sdk"
authors         = ["Informal Systems <hello@informal.systems>"]
rust-version    = "1.79"

[profile.release]
overflow-checks = true

[workspace.dependencies]
async-trait                     = { version = "0.1.81" }
ibc                             = { version = "0.53.0" }
ibc-proto                       = { version = "0.46.0" }
ibc-relayer                     = { version = "0.29" }
ibc-relayer-types               = { version = "0.29" }
ibc-telemetry                   = { version = "0.29" }
tendermint                      = { version = "0.37" }
tendermint-proto                = { version = "0.37" }
tendermint-rpc                  = { version = "0.37" }
tendermint-testgen              = { version = "0.37" }
basecoin                        = { version = "0.1.0" }
cgp-core                        = { version = "0.1.0" }
cgp-error-eyre                  = { version = "0.1.0" }
cgp-component-macro             = { version = "0.1.0" }
clap                            = { version = "4.5.8" }
oneline-eyre                    = { version = "0.1.0" }
prost                           = { version = "0.12.3" }
prost-types                     = { version = "0.12.3" }
serde                           = { version = "1.0.203" }
serde_derive                    = { version = "1.0" }
serde_json                      = { version = "1.0" }
tokio                           = { version = "1.38" }
tracing                         = { version = "0.1.40" }
tracing-subscriber              = { version = "0.3.18" }
time                            = { version = "0.3.36" }
tonic                           = { version = "0.11" }
toml                            = { version = "0.8.12" }
futures                         = { version = "0.3.30", default-features = false }
futures-core                    = { version = "0.3.30", default-features = false }
futures-util                    = { version = "0.3.30", default-features = false }
futures-channel                 = { version = "0.3.30", default-features = false }
eyre                            = { version = "0.6.12" }
itertools                       = { version = "0.12" }
http                            = { version = "0.2.11" }
humantime                       = { version = "2.1.0" }
flex-error                      = { version = "0.4.4", default-features = false }
hdpath                          = { version = "0.6.3" }
rand                            = { version = "0.8.5" }
bech32                          = { version = "0.9.1" }
sha2                            = { version = "0.10.8" }
ics23                           = { version = "0.11.1" }

hermes-runtime-components               = { version = "0.1.0" }
hermes-async-runtime-components         = { version = "0.1.0" }
hermes-tokio-runtime-components         = { version = "0.1.0" }
hermes-runtime                          = { version = "0.1.0" }

hermes-error                            = { version = "0.1.0" }
hermes-encoding-components              = { version = "0.1.0" }
hermes-protobuf-encoding-components     = { version = "0.1.0" }

hermes-logging-components               = { version = "0.1.0" }
hermes-tracing-logging-components       = { version = "0.1.0" }
hermes-logger                           = { version = "0.1.0" }

hermes-relayer-components               = { version = "0.1.0" }
hermes-relayer-components-extra         = { version = "0.1.0" }

hermes-test-components                  = { version = "0.1.0" }
hermes-ibc-test-suite                   = { version = "0.1.0" }

hermes-any-counterparty                 = { version = "0.1.0" }

hermes-cli                              = { version = "0.1.0" }
hermes-cli-components                   = { version = "0.1.0" }
hermes-cli-framework                    = { version = "0.1.0" }

hermes-cosmos-chain-components          = { version = "0.1.0" }
hermes-cosmos-relayer                   = { version = "0.1.0" }
hermes-cosmos-wasm-relayer              = { version = "0.1.0" }
hermes-cosmos-test-components           = { version = "0.1.0" }
hermes-cosmos-integration-tests         = { version = "0.1.0" }

hermes-celestia-client-components       = { version = "0.1.0" }
hermes-celestia-chain                   = { version = "0.1.0" }
hermes-celestia-test-components         = { version = "0.1.0" }
hermes-celestia-integration-tests       = { version = "0.1.0" }

hermes-wasm-client-components           = { version = "0.1.0" }
hermes-wasm-test-components             = { version = "0.1.0" }

hermes-solomachine-chain-components     = { version = "0.1.0" }
hermes-solomachine-relayer              = { version = "0.1.0" }

[patch.crates-io]
ibc                         = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-core                    = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-core-client             = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-core-host-cosmos        = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-client-tendermint       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-client-wasm-types       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-app-transfer            = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-primitives              = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-query                   = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }
ibc-derive                  = { git = "https://github.com/cosmos/ibc-rs.git", rev = "5dc0b09" }

basecoin                    = { git = "https://github.com/informalsystems/basecoin-rs.git", rev = "65c00d3" }
tower-abci                  = { git = "https://github.com/informalsystems/tower-abci", rev = "37d952e" }

cgp-core                = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-component           = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-component-macro     = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-component-macro-lib = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-field               = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-field-macro         = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-field-macro-lib     = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-error               = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-error-eyre          = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-async               = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-async-macro         = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-run                 = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }
cgp-inner               = { git = "https://github.com/informalsystems/cgp.git", branch = "remove-async-bound" }

ibc-relayer             = { git = "https://github.com/informalsystems/hermes.git", rev = "43f3e835" }
ibc-telemetry           = { git = "https://github.com/informalsystems/hermes.git", rev = "43f3e835" }
ibc-relayer-types       = { git = "https://github.com/informalsystems/hermes.git", rev = "43f3e835" }

hermes-relayer-components           = { path = "./crates/relayer/relayer-components" }
hermes-relayer-components-extra     = { path = "./crates/relayer/relayer-components-extra" }

hermes-runtime-components           = { path = "./crates/runtime/runtime-components" }
hermes-async-runtime-components     = { path = "./crates/runtime/async-runtime-components" }
hermes-tokio-runtime-components     = { path = "./crates/runtime/tokio-runtime-components" }
hermes-runtime                      = { path = "./crates/runtime/runtime" }

hermes-error                        = { path = "./crates/error" }

hermes-encoding-components          = { path = "./crates/encoding/encoding-components" }
hermes-protobuf-encoding-components = { path = "./crates/encoding/protobuf-encoding-components" }

hermes-logging-components           = { path = "./crates/logging/logging-components" }
hermes-tracing-logging-components   = { path = "./crates/logging/tracing-logging-components" }
hermes-logger                       = { path = "./crates/logging/logger" }

hermes-test-components              = { path = "./crates/test/test-components" }
hermes-ibc-test-suite               = { path = "./crates/test/test-suite" }

hermes-any-counterparty             = { path = "./crates/any/any-counterparty" }

hermes-cli                          = { path = "./crates/cli/cli" }
hermes-cli-components               = { path = "./crates/cli/cli-components" }
hermes-cli-framework                = { path = "./crates/cli/cli-framework" }

hermes-cosmos-chain-components      = { path = "./crates/cosmos/cosmos-chain-components" }
hermes-cosmos-relayer               = { path = "./crates/cosmos/cosmos-relayer" }
hermes-cosmos-wasm-relayer          = { path = "./crates/cosmos/cosmos-wasm-relayer" }
hermes-cosmos-test-components       = { path = "./crates/cosmos/cosmos-test-components" }
hermes-cosmos-integration-tests     = { path = "./crates/cosmos/cosmos-integration-tests" }

hermes-celestia-client-components   = { path = "./crates/celestia/celestia-client-components" }
hermes-celestia-chain               = { path = "./crates/celestia/celestia-chain" }
hermes-celestia-test-components     = { path = "./crates/celestia/celestia-test-components" }
hermes-celestia-integration-tests   = { path = "./crates/celestia/celestia-integration-tests" }

hermes-wasm-client-components       = { path = "./crates/wasm/wasm-client-components" }
hermes-wasm-test-components         = { path = "./crates/wasm/wasm-test-components" }

hermes-solomachine-chain-components = { path = "./crates/solomachine/solomachine-chain-components" }
hermes-solomachine-relayer          = { path = "./crates/solomachine/solomachine-relayer" }
