[package]
name = "hermes-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
cgp                             = { workspace = true }
hermes-prelude                  = { workspace = true }
hermes-runtime-components       = { workspace = true }
hermes-logging-components       = { workspace = true }
hermes-encoding-components      = { workspace = true }
hermes-chain-components         = { workspace = true }
hermes-chain-type-components    = { workspace = true }
hermes-relayer-components       = { workspace = true }
hermes-relayer-components-extra = { workspace = true }
hermes-test-components          = { workspace = true }
