[package]
name         = "cosmos-integration-tests"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
cgp-core                        = { workspace = true }
ibc-relayer                     = { workspace = true }
ibc-relayer-types               = { workspace = true }
ibc-relayer-runtime             = { workspace = true }
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
ibc-relayer-cosmos              = { workspace = true }
ibc-test-components             = { workspace = true }
cosmos-client-components        = { workspace = true }
cosmos-test-components          = { workspace = true }

eyre            = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
serde_json      = { workspace = true }

stable-eyre     = { version = "0.2.2" }