[package]
name         = "cosmos-test-components"
version      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
keywords     = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }
rust-version = { workspace = true }
readme       = "README.md"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[dependencies]
ibc-proto         = { workspace = true }
ibc-relayer       = { workspace = true }
ibc-relayer-types = { workspace = true }
cgp-core          = { workspace = true }
ibc-relayer-runtime             = { workspace = true }
ibc-relayer-components          = { workspace = true }
ibc-relayer-components-extra    = { workspace = true }
ibc-relayer-subscription        = { workspace = true }
ibc-test-components             = { workspace = true }
tendermint      = { workspace = true, features = ["secp256k1"] }
tendermint-rpc  = { workspace = true, features = ["http-client", "websocket-client"] }

async-trait     = { workspace = true }
flex-error      = { workspace = true }
prost           = { workspace = true }
eyre            = { workspace = true }
tokio           = { workspace = true }
itertools       = { workspace = true }
futures         = { workspace = true }
tracing         = { workspace = true }
http            = { workspace = true }
tonic           = { workspace = true, features = ["tls", "tls-roots"] }

serde_json  = "1"
toml        = "0.7"
hdpath      = "0.6.3"
