[package]
name         = "ibc-relayer-components-extra-sync"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.72"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
cgp-core = { version = "0.1.0", package = "cgp-core-sync" }
ibc-relayer-components = { version = "0.1.0", package = "ibc-relayer-components-sync" }
