[package]
name         = "ibc-relayer-components"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.72"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]
default = [ "async" ]
sync = [ "cgp-async/sync" ]
async = [ "cgp-async/async" ]

[dependencies]
cgp-core = { version = "0.1.0" }
cgp-macros = { version = "0.1.0" }
cgp-async = { version = "0.1.0", default-features = false }
async-trait = "0.1.56"
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
